Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,8 @@
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    if len(restaurant['price']) < len(aternative['price'])\n",
-    "        return restautant"
+    "        return restaurant\n",
+    "    "
    ]
   },
   {
