--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,8 @@
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    if len(restaurant['price']) < len(aternative['price'])\n",
     "        return restaurant\n",
-    "    "
+    "    if len(restaurant['price']) > len(aternative['price'])\n",
+    "        return alte"
    ]
   },
   {
