Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -195,7 +195,7 @@
     "    if len(restaurant['price']) < len(aternative['price'])\n",
     "        return restaurant\n",
     "    if len(restaurant['price']) > len(aternative['price'])\n",
-    "        return alte"
+    "        return alternative"
    ]
   },
   {
