--- a/index.ipynb
+++ b/index.ipynb
@@ -195,7 +195,8 @@
     "    if len(restaurant['price']) < len(aternative['price'])\n",
     "        return restaurant\n",
     "    if len(restaurant['price']) > len(aternative['price'])\n",
-    "        return alternative"
+    "        return alternative\n",
+    "    re"
    ]
   },
   {
