--- a/index.ipynb
+++ b/index.ipynb
@@ -196,7 +196,7 @@
     "        return restaurant\n",
     "    if len(restaurant['price']) > len(aternative['price'])\n",
     "        return alternative\n",
-    "    return \"Restaurants\""
+    "    return \"Restaurants are the same price\""
    ]
   },
   {
