--- a/index.ipynb
+++ b/index.ipynb
@@ -187,12 +187,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-11-7982eb35ad4f>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-7982eb35ad4f>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    if len(restaurant['price']) < len(aternative['price'])\u001b[0m\n\u001b[0m                                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if len(restaurant['price']) < len(aternative['price'])\n",
+    "    if len(restaurant['price']) < len(alternative['price'])\n",
     "        return restaurant\n",
     "    if len(restaurant['price']) > len(aternative['price'])\n",
     "        return alternative\n",
