--- a/index.ipynb
+++ b/index.ipynb
@@ -201,9 +201,9 @@
    ],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if len(restaurant['price']) < len(alternative['price'])\n",
+    "    if len(restaurant['price']) < len(alternative['price']):\n",
     "        return restaurant\n",
-    "    if len(restaurant['price']) > len(alternative['price'])\n",
+    "    if len(restaurant['price']) > len(alternative['price']):\n",
     "        return alternative\n",
     "    return \"Restaurants are the same price!\""
    ]
