--- a/index.ipynb
+++ b/index.ipynb
@@ -283,22 +283,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-19-d4a121ffabe5>, line 3)",
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-20-c63631fc5a31>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-19-d4a121ffabe5>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    for restaurant in restaurants\u001b[0m\n\u001b[0m                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-c63631fc5a31>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    if not restaurant['is_closed']:\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open = []\n",
-    "    for restaurant in restaurants\n",
+    "    for restaurant in restaurants:\n",
     "    if not restaurant['is_closed']:\n",
     "        open.append(restaurant)\n",
     "        return open"
